# golos-witness-tools

./: .dockerignore  .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  ESTIMATE_GBG_DEBT.md  LICENSE  PRICEFEED.md  Pipfile  README.md  UPDATE_WITNESS.md  WITNESS_MONITOR.md  bitshares_helper.py  common.yml.example  docker-compose.yml.example  estimate_gbg_debt.py  functions.py  get_curation_voting.py  get_feed_history.py  get_inflation_voting.py  get_median_props.py  get_median_voting.py  get_miner_queue.py  get_witness.py  get_witnesses.py  inflation.py  pyproject.toml  requirements.txt  update_price_feed.py  update_price_feed.yml.example  update_witness.py  update_witness.yml.example  witness_monitor.py  witness_monitor.yml.exmaple
docker/: docker-entrypoint.sh
docker/confd/templates/: update_price_feed.yml.tmpl  witness_monitor.yml.tmpl
docker/confd/toml/: update_price_feed.toml  witness_monitor.toml
