[tool.poetry]
name = "golos-witness-tools"
version = "0.2.0"
description = "Scripts for Golos witnesses"
authors = ["Vladimir Kamarzin <vvk@vvk.pp.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
golosscripts = "^0.3.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.3.0"

[tool.black]
line-length = 120
skip-string-normalization = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
